<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="num.app.gpluslogin.MainActivity">


    <group>
        <item android:id="@+id/action_today"
            android:title="@string/action_today"
            android:orderInCategory="1"
            app:showAsAction="never"/>
        <item android:id="@+id/action_day_view"
            android:title="@string/action_day_view"
            android:orderInCategory="2"
            app:showAsAction="never"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/action_three_day_view"
            android:orderInCategory="3"
            app:showAsAction="never"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/action_week_view"
            android:orderInCategory="4"
            app:showAsAction="never"/>
        <item android:id="@+id/action_monthly_view"
            android:title="@string/action_monthly_view"
            android:orderInCategory="5"
            app:showAsAction="never"
            android:checked="true"/>

    </group>
</menu>
